--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -134,20 +134,24 @@
           
           <div class="about-features">
             <div class="feature">
-              <i class="fas fa-check-circle"></i>
+              <i class="fas fa-box"></i>
               <span>Premium Quality Materials</span>
             </div>
             <div class="feature">
-              <i class="fas fa-check-circle"></i>
+              <i class="fas fa-cogs"></i>
               <span>Custom Manufacturing</span>
             </div>
             <div class="feature">
-              <i class="fas fa-check-circle"></i>
+              <i class="fas fa-solar-panel"></i>
               <span>Eco-Friendly Solutions</span>
             </div>
             <div class="feature">
-              <i class="fas fa-check-circle"></i>
+              <i class="fas fa-truck"></i>
               <span>Nationwide Delivery</span>
+            </div>
+            <div class="feature">
+              <i class="fas fa-award"></i>
+              <span>ISO 9001 Certified Production</span>
             </div>
           </div>
           
@@ -480,9 +484,9 @@
         </div>
         <div class="contact-buttons">
           <a routerLink="/contact" class="btn btn-primary">Contact Us</a>
-          <a href="tel:+911234567890" class="btn btn-outline">
+          <a href="tel:+917778020805" class="btn btn-outline">
             <i class="fas fa-phone-alt"></i>
-            <span>+91 12345 67890</span>
+            <span>+91 77780 20805</span>
           </a>
         </div>
       </div>
