--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -1,15 +1,15 @@
 // Brand Colors
-$primary: #1a75ff;      // Main brand blue
-$primary-light: #4791ff; // Lighter blue
-$primary-lighter: #75adff; // Even lighter blue
-$primary-lightest: #a3c9ff; // Lightest blue
-$primary-dark: #005ce6;  // Darker blue
+$primary: #a0293a;      // Main brand blue
+$primary-light: #c13d4f; // Lighter blue
+$primary-lighter: #d45d6d; // Even lighter blue
+$primary-lightest: #e88d99; // Lightest blue
+$primary-dark: #7a1f2c;  // Darker blue
 
-$secondary: #4169e1;     // Royal blue
-$secondary-light: #6384e8; // Lighter royal blue
-$secondary-lighter: #869fee; // Even lighter royal blue
-$secondary-lightest: #a9baf5; // Lightest royal blue
-$secondary-dark: #2a4cc7; // Darker royal blue
+$secondary: #2D1B1C;      // Deep brown/almost black
+$secondary-light: #3D2526;    // Lighter brown
+$secondary-lighter: #4D2F30;  // Medium brown
+$secondary-lightest: #5D393A; // Lightest brown
+$secondary-dark: #1D1112;  // Darker royal blue
 
 // Neutral Colors
 $dark: #1f1f1f;
